enterprise/operator/pkg/lb/testdata/lbservice_translation/39-http-jwt-auth/input-config.yaml
ServerName: "ilb"
Metrics:
  ClusterAdditionalRequestResponse: true
  ClusterTimeoutBudget: true
  ClusterPerEndpoint: true
T1T2HealthCheck:
  T1ProbeTimeoutSeconds: 5
  T1ProbeHTTPPath: /health
  T1ProbeHTTPMethod: GET
  T1ProbeHTTPUserAgentPrefix: cilium-probe/
  T2ProbeMinHealthyBackendPercentage: 20
