enterprise/operator/pkg/lb/testdata/lbservice_translation/39-http-jwt-auth/input-secret-2.yaml
---
apiVersion: v1
kind: Secret
metadata:
  namespace: default
  name: lb-2
type: Opaque
data:
  jwks: eyJrZXlzIjpbeyJjcnYiOiJFZDI1NTE5Iiwia3R5IjoiT0tQIiwieCI6IlF1WnVUQk05akNuSG5mVE4wQl80VzJTWENOdlFKUERwaFJGeEg5dlRTdnMifV0sImtpZCI6InByb3ZpZGVyMDAifQ==
